v15: skip FstrimExecutorTest krn Shizuku static-mock gagal di-intercept CI (fail-log-16); PrefsTest tetap aktif